feat: Update BembaJS template to match Next.js grid layout
- Updated template to use exact Next.js grid structure with 20px_1fr_20px rows
- Added numbered instructions list matching Next.js format
- Implemented proper button parsing with primary/secondary styling
- Added footer with Learn, Examples, and Go to bembajs.dev links
- Updated dev server HTML generation to match new grid layout
- Fixed button parsing logic to correctly extract and render buttons
- Published bembajs@1.0.14 and create-bembajs@1.0.4

The template now provides the exact same visual experience as the latest Next.js welcome page but with BembaJS branding and correct file references (amapeji/index.bemba instead of app/page.tsx).

--- a/packages/bembajs/package.json
+++ b/packages/bembajs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bembajs",
-  "version": "1.0.2",
+  "version": "1.0.14",
   "description": "BembaJS - A Next.js-like framework for programming in Bemba language",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -26,11 +26,12 @@
   "files": [
     "dist",
     "bin",
+    "vscode",
     "README.md"
   ],
   "scripts": {
     "build": "node build.js",
-    "dev": "node src/server/app.js",
+    "dev": "node dist/dev-server.js",
     "test": "node test/index.js",
     "clean": "rm -rf dist"
   },
@@ -47,7 +48,7 @@
   "author": "BembaJS Team",
   "license": "MIT",
   "dependencies": {
-    "bembajs-core": "workspace:*",
+    "bembajs-core": "^1.0.0",
     "express": "^4.21.2",
     "commander": "^11.1.0",
     "chokidar": "^3.5.3",
@@ -57,6 +58,29 @@
   "devDependencies": {},
   "engines": {
     "node": ">=16.0.0"
+  },
+  "contributes": {
+    "languages": [
+      {
+        "id": "bemba",
+        "aliases": ["Bemba", "bemba"],
+        "extensions": [".bemba"],
+        "configuration": "./vscode/language-configuration.json"
+      }
+    ],
+    "grammars": [
+      {
+        "language": "bemba",
+        "scopeName": "source.bemba",
+        "path": "./vscode/bemba.tmLanguage.json"
+      }
+    ],
+    "snippets": [
+      {
+        "language": "bemba",
+        "path": "./vscode/snippets.json"
+      }
+    ]
   },
   "repository": {
     "type": "git",
