feat: Add Tailwind CSS support with new centered layout
- Integrated Tailwind CSS CDN with custom configuration
- Added CSS variables for background/foreground colors with dark mode support
- Replaced grid layout with centered flex layout matching Next.js design
- Updated all template files to use new layout structure
- Added proper metadata support (title, description)
- Updated button styling to use Tailwind utility classes
- Bumped bembajs to v1.0.24 and create-bembajs to v1.0.8
- Published both packages to npm

The new layout features:
- Centered design with proper spacing and typography
- Dark mode support with CSS variables
- Tailwind utility classes for consistent styling
- Responsive design with mobile-first approach

--- a/packages/create-bembajs/templates/base/package.json
+++ b/packages/create-bembajs/templates/base/package.json
@@ -21,11 +21,13 @@
   "author": "BembaJS Developer",
   "license": "MIT",
   "dependencies": {
-    "bembajs": "^1.0.0"
+    "bembajs": "^1.0.24",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@bembajs/cli": "^1.0.0",
-    "@bembajs/dev-tools": "^1.0.0"
+    "eslint": "^8.0.0",
+    "prettier": "^3.0.0"
   },
   "bemba": {
     "version": "1.0.0",
