--- a/packages/bembajs-vscode-extension/package.json
+++ b/packages/bembajs-vscode-extension/package.json
@@ -2,7 +2,7 @@
   "name": "bembajs-language-support",
   "displayName": "BembaJS Language Support",
   "description": "Provides language support for BembaJS files (.bemba) with syntax highlighting, file icons, IntelliSense, React integration, and full control flow syntax (conditionals, loops, async/await)",
-  "version": "1.3.0",
+  "version": "1.3.2",
   "publisher": "bembajs",
   "engines": {
     "vscode": "^1.80.0"
@@ -36,7 +36,6 @@
     "url": "https://github.com/YamikaniKL/bemba-compiler/issues"
   },
   "license": "MIT",
-  "icon": "icon.png",
   "galleryBanner": {
     "color": "#1e40af",
     "theme": "dark"
@@ -45,8 +44,14 @@
     "languages": [
       {
         "id": "bemba",
-        "aliases": ["BembaJS", "bemba", "Bemba"],
-        "extensions": [".bemba"],
+        "aliases": [
+          "BembaJS",
+          "bemba",
+          "Bemba"
+        ],
+        "extensions": [
+          ".bemba"
+        ],
         "configuration": "./language-configuration.json",
         "icon": {
           "light": "./icons/bemba-light.svg",
@@ -108,7 +113,7 @@
   ],
   "main": "./out/extension.js",
   "scripts": {
-    "vscode:prepublish": "npm run compile",
+    "vscode:prepublish": "echo 'Skipping compilation - using pre-built extension.js'",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
     "pretest": "npm run compile && npm run lint",
@@ -117,13 +122,13 @@
     "package": "vsce package"
   },
   "devDependencies": {
+    "@types/node": "^16.18.126",
     "@types/vscode": "^1.80.0",
-    "@types/node": "16.x",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
-    "eslint": "^8.28.0",
-    "typescript": "^4.9.4",
     "@vscode/test-electron": "^2.2.0",
+    "eslint": "^8.28.0",
+    "typescript": "^4.9.5",
     "vsce": "^2.15.0"
   }
 }
